@@ -4,6 +4,9 @@
 * Add bin/analyzeerror
 * Add bin/multivariablefunction
 * Modify errorfittedfunction to ignore most strict pair at fitting.
+* Malge::SimultaneousEquations::NotRegularError   is added
+* Malge::SimultaneousEquations::SizeMismatchError is added
+* Malge::SimultaneousEquations::NotSquareError    is added
 
 == Version 0.0.8 [2013-03-18] released
 * Small revision.
